fix missing codeforces submodule in directory

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "project-euler"]
 	path = project-euler
 	url = https://gist.github.com/damiannmm/000d9a256b3663fbecff578954362b8b
+[submodule "codeforces"]
+	path = codeforces
+	url = https://gist.github.com/damiannmm/ecd3eb33df51dd779651f3829fd1295c
